--- a/homework/index.html
+++ b/homework/index.html
@@ -29,16 +29,16 @@
 		<b>Game Programming with Three.JS</b><br/>
 		fall 2018<br/>
 		410406117 黃聖傑<br/>
-		<a href="#">信箱</a><br/><br/>
+		<a href="mailto:jk39202p@gmail.com">信箱</a><br/><br/>
 		<div>
 			<table>
 				<tr>
-					<td class="td_img"><img src="gifs/hw1.gif"/></td>
-					<td class="td_img"><!--<img src="gifs/hw2.gif"/>--></td>
+					<td class="td_img"><img src="gif/hw0.gif"/></td>
+					<td class="td_img"><!--<img src="gifs/hw1.gif"/>--></td>
 					<td class="td_img"><!--<img src="gifs/hw2.gif"/>--></td>
 				</tr>
 				<tr>
-					<td><a href="#">hw0.html</a><br/>讓火車在XZ平面上，依+Y軸做等速圓周運動</td>
+					<td><a href="hw0.html">hw0.html</a></td>
 					<td><a href=""></a></td>
 					<td><a href=""></a></td>
 				</tr>
