--- a/homework/index.html
+++ b/homework/index.html
@@ -34,12 +34,12 @@
 			<table>
 				<tr>
 					<td class="td_img"><img src="gif/hw0.gif"/></td>
-					<td class="td_img"><!--<img src="gifs/hw1.gif"/>--></td>
-					<td class="td_img"><!--<img src="gifs/hw2.gif"/>--></td>
+					<td class="td_img"><img src="gif/hw1.gif"/></td>
+					<td class="td_img"><!--<img src="gif/hw2.gif"/>--></td>
 				</tr>
 				<tr>
 					<td><a href="hw0.html">hw0.html</a></td>
-					<td><a href=""></a></td>
+					<td><a href="hw1.html">hw1.html</a></td>
 					<td><a href=""></a></td>
 				</tr>
 				<!--<tr>
