--- a/homework/index.html
+++ b/homework/index.html
@@ -35,12 +35,12 @@
 				<tr>
 					<td class="td_img"><img src="gif/hw0.gif"/></td>
 					<td class="td_img"><img src="gif/hw1.gif"/></td>
-					<td class="td_img"><!--<img src="gif/hw2.gif"/>--></td>
+					<td class="td_img"><img src="gif/hw2.gif"/></td>
 				</tr>
 				<tr>
 					<td><a href="hw0.html">hw0.html</a></td>
 					<td><a href="hw1.html">hw1.html</a></td>
-					<td><a href=""></a></td>
+					<td><a href="hw2.html">hw2.html</a></td>
 				</tr>
 				<!--<tr>
 					<td class="td_img"><img src="gifs/hw3.gif"/></td>
