--- a/homework/index.html
+++ b/homework/index.html
@@ -42,17 +42,17 @@
 					<td><a href="hw1.html">hw1.html</a></td>
 					<td><a href="hw2.html">hw2.html</a></td>
 				</tr>
-				<!--<tr>
+				<tr>
 					<td class="td_img"><img src="gifs/hw3.gif"/></td>
-					<td class="td_img"><img src="gifs/hw4.gif"/></td>
-					<td class="td_img"><img src="gifs/hw5.gif"/></td>
+					<!--<td class="td_img"><img src="gifs/hw4.gif"/></td>
+					<td class="td_img"><img src="gifs/hw5.gif"/></td>-->
 				</tr>
 				<tr>
-					<td><a href=""></a></td>
-					<td><a href=""></a></td>
-					<td><a href=""></a></td>
+					<td><a href="hw3.html">hw3.html</a></td>
+					<!--<td><a href=""></a></td>
+					<td><a href=""></a></td>-->
 				</tr>
-				<tr>
+				<!--<tr>
 					<td class="td_img"><img src="gifs/hw6.gif"/></td>
 					<td class="td_img"><img src="gifs/hw7.gif"/></td>
 					<td class="td_img"><img src="gifs/final.gif"/></td>
