--- a/homework/index.html
+++ b/homework/index.html
@@ -43,9 +43,9 @@
 					<td><a href="hw2.html">hw2.html</a></td>
 				</tr>
 				<tr>
-					<td class="td_img"><img src="gifs/hw3.gif"/></td>
-					<!--<td class="td_img"><img src="gifs/hw4.gif"/></td>
-					<td class="td_img"><img src="gifs/hw5.gif"/></td>-->
+					<td class="td_img"><img src="gif/hw3.gif"/></td>
+					<!--<td class="td_img"><img src="gif/hw4.gif"/></td>
+					<td class="td_img"><img src="gif/hw5.gif"/></td>-->
 				</tr>
 				<tr>
 					<td><a href="hw3.html">hw3.html</a></td>
@@ -53,9 +53,9 @@
 					<td><a href=""></a></td>-->
 				</tr>
 				<!--<tr>
-					<td class="td_img"><img src="gifs/hw6.gif"/></td>
-					<td class="td_img"><img src="gifs/hw7.gif"/></td>
-					<td class="td_img"><img src="gifs/final.gif"/></td>
+					<td class="td_img"><img src="gif/hw6.gif"/></td>
+					<td class="td_img"><img src="gif/hw7.gif"/></td>
+					<td class="td_img"><img src="gif/final.gif"/></td>
 				</tr>
 				<tr>
 					<td><a href=""></a></td>
