--- a/homework/index.html
+++ b/homework/index.html
@@ -45,12 +45,12 @@
 				<tr>
 					<td class="td_img"><img src="gif/hw3.gif"/></td>
 					<td class="td_img"><img src="gif/hw4.gif"/></td>
-					<!--<td class="td_img"><img src="gif/hw5.gif"/></td>-->
+					<td class="td_img"><img src="gif/hw5.gif"/></td>
 				</tr>
 				<tr>
 					<td><a href="hw3.html">hw3.html</a></td>
 					<td><a href="hw4.html">hw4.html</a></td>
-					<!--<td><a href=""></a></td>-->
+					<td><a href="hw5.html">hw5.html</a></td>
 				</tr>
 				<!--<tr>
 					<td class="td_img"><img src="gif/hw6.gif"/></td>
