--- a/homework/hw5.html
+++ b/homework/hw5.html
@@ -18,7 +18,7 @@
 	<body>
 		<div id="info"><span style="font-size:20px;">MD2</span><br/>
 			上鍵:前進、下鍵:後退、左鍵:逆時針旋轉、右鍵:順時針旋轉、空白鍵:跳躍<br/>
-			<button id="play" style="width:20%">Pause</button>
+			music: <button id="play" style="width:20%">Pause</button>
 		</div>
 		<audio id="soundtrack" autoplay loop style="display:none">
 			<source src="https://godmilk.github.io/GameProgramming/sounds/Audiomachine_Breath_and_Life.mp3" type='audio/mp3'>
